NTI-10124 - Fix total input alignment

--- a/src/editor/info/components/PointValue.scss
+++ b/src/editor/info/components/PointValue.scss
@@ -4,6 +4,7 @@
 		background-color: white;
 		padding-left: 0;
 		border: none;
+		margin-top: -3px;
 
 		&:focus {
 			border: inherit;
